# lumen-lang

./: .gitignore  ARCHITECTURAL_ALIGNMENT.md  Cargo.toml  DELIVERY_SUMMARY.md  DESIGN_CORE.md  DIR_STRUCTURE.txt  DYNAMIC_TOKENS_EXPLORATION.md  EXTERN_CORRECTION.md  FIBONACCI_RECURSIVE_MICROCODE_OPOTIMISATIONS.md  GRAMMAR.md  LANGUAGE_EXAMPLES.md  LANGUAGE_MODULES_SUMMARY.md  MICROCODE_ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md  QUICK_REFERENCE.md  README.md  README_LANGUAGES.md  README_LANGUAGE_MODULES.md  REFACTORING_NEEDED.md  REFACTORING_SUMMARY.md  SRC_LAYOUT.txt  STREAM_KERNEL_BUG_REPORT.md  STREAM_KERNEL_BUG_ROOT_CAUSE.md  STREAM_KERNEL_SCOPE_LEAK_FIX.md  VERSION_HISTORY.md  batch_refactor.sh  create_mini_languages.sh  generate_all_languages.sh  perf_test.sh  refactor_parsers.py  refactor_parsers_phase2.py  refactor_to_lexeme.py  test.sh  test_all  test_all.sh  test_assign.c  test_e.sh  test_lumen.sh  test_memoization.sh  test_mini_rust.mr  (+3 more)
docs/: COMPARISON_AI_VS_LUMEN.md  DESIGN.md  DIRECTORY_STRUCTURE.txt  LANGUAGE_COMPARISON.md  LUMEN_COMPACT_REFERENCE.md  LUMEN_FUNCTION_REFERENCE.md  LUMEN_KERNEL_MICROCODE.md  LUMEN_KERNEL_STREAM.md  LUMEN_LANGUAGE_BNF.md  LUMEN_LANGUAGE_DESIGN.md  VERSION_HISTORY.md  apply_word_boundary_changes.md  claude_unblock_prompt.md
examples/: demo_v0_1.lm  fibonacci.lm  loop.lm  microcode_test.sh  test_features.lm
grammar/: GENERATION_REPORT.md  INDEX.md  QUICK_REFERENCE.md  README.md  lumen.ebnf  mini-python.ebnf  mini-rust.ebnf  python.ebnf  rust.ebnf
lib_lumen/: base.lm  constants.lm  constants_1024.lm  constants_default.lm  (+27 more)
(+746 files in other folders)
