[package]
name = "lumen-lang"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "lumen-lang"
path = "src/main.rs"

[[bin]]
name = "stream"
path = "src_stream/main.rs"

[[bin]]
name = "microcode"
path = "src_microcode/main.rs"

[[bin]]
name = "microcode_2"
path = "src_microcode_2/main.rs"

[lib]
name = "microcode_2"
path = "src_microcode_2/lib.rs"

[dependencies]
